[package]
name = "dyrah_client"
version = "0.1.0"
edition = "2024"

[features]
default=[]
hot_reload=["egor/hot_reload"]

[dependencies]
egor = { git = "https://github.com/wick3dr0se/egor", features = ["ui"] }
wrym = { git = "https://github.com/wick3dr0se/wrym" }
bincode = "1.3.3"
serde = { version = "1.0.219", features = ["derive"] }

dyrah_shared = { path = "../dyrah_shared" }
secs = "0.1.0"
image = "0.25.6"
