[package]
name = "dyrah_server"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "0.30.4", features = ["serde"] }
wrym = { git = "https://github.com/wick3dr0se/wrym", version = "0.1.0" }
bincode = "1.3.3"
serde = { version = "1.0.219", features = ["derive"] }

dyrah_shared = { path = "../dyrah_shared" }
secs = "0.1.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
argon2 = { version = "0.5.3", features = ["std"] }
pathfinding = "4.14.0"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
